k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: devsecops-demo
  labels:
    app: devsecops-demo
spec:
  type: ClusterIP
  selector:
    app: devsecops-demo
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
